--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.10-FINAL</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.10</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
 <build>
