--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/hello
 jdbc.username=root
 jdbc.password=jia
